test/compile-fail/resolution/conflicts/type-params/expected.txt
error: the type parameter `T` is defined multiple times
 --> top.rhdl:1:8
  |
1 | fn a<T, T>() {}
  |      - previous definition of the type parameter `T` here
1 | fn a<T, T>() {}
  |         ^ `T` redefined here
